# StratOS

./: .gitignore  Auditor.md  Builder.md  CLAUDE_AUDITOR_PROMPT.md  CODEX_PROTOCOL.md  Engineer.md  Makefile  README.md  StratBootStack.md  StratOS-Codex-Checklist-v2.md  StratOS-Codex-Prompt.md  StratOS-Coding-Checklist.md  StratOS-Design.md  StratOS-Discussion-Log.md  TALKING-2.md  TALKING-3.md  TALKING.md  build-all-and-run.sh  new1.md  ovmf_vars.fd  suggested.md
.github/workflows/: qemu-boot.yml  stratos-ci.yml
StratBrowser/: CMakeLists.txt  README.md
StratBrowser/src/: BrowserWindow.cpp  BrowserWindow.h  main.cpp  main_gtk.cpp  main_stub.cpp
docs/: README.md  application-config-resolution.md  etc-on-config.md  runtime-persistence-contract.md
docs/agent/: README.md  ai-roles.md  spotlite.md  stratboot.md  stratman.md  stratmon.md  stratos-design.md  stratpanel.md  stratsettings.md  stratsup-sysroot.md  stratterm.md  stratvm.md
docs/human/: README.md  application-config-resolution.md  boot-stack.md  coding-checklist.md  discussion-log.md  efi-variables.md  etc-on-config.md  file-explorer.md  live-iso.md  runtime-persistence-contract.md  spotlite.md  stratboot.md  stratman.md  stratmon.md  stratos-design.md  stratpanel.md  stratsettings.md  stratsup-and-sysroot.md  stratterm.md  stratvm.md
fonts/: README.md
fonts/stratos/: NOTICE.txt
mockups/: render_updated_interface_png.py
scripts/: build-all-and-run.sh  build-libinput.sh  build-live-iso.sh  create-test-disk.sh  fetch-dmz-cursor-theme.sh  fetch-fos-fonts.sh  fetch-wlroots.sh  run-qemu.sh  strat-installer.sh  strat-live-install-wizard.sh  strat-live-welcome.sh  strat-tool-catalog.sh  tool-source-catalog.tsv  update-test-disk.sh
scripts/phase0/: create-qemu-disk-image.sh  install-gnu-efi.sh  install-toolchain.sh  verify-gnu-efi.sh  verify-toolchain.sh
scripts/phase1/: build-system-image.sh  create-disk-image.sh  create-partition-layout.sh  format-partitions.sh  lib.sh  setup-toolchain.sh  validate-mounts.sh  verify-disk-layout-prereqs.sh  verify-erofs-tooling.sh  verify-toolchain.sh
stratboot/: Makefile
stratlayer/: Cargo.toml
stratman/: Cargo.toml
stratmon/: Cargo.toml
stratmon/.cargo/: config.toml
stratmon/src/: fiemap.rs  main.rs  manifest.rs
stratos-kernel/: README.md  stratos.config  stratos_minimal.config
stratpanel/: Cargo.toml
stratsettings/: Cargo.toml  README.md
stratsettings/defaults/: settings.default.toml  stratvm-keybinds.default  wpa_supplicant.default.conf
stratsettings/src/: keyboard.rs  lib.rs
stratstop/: Makefile
stratsup/: Cargo.toml
stratterm/: Cargo.toml  Makefile  README.md  indexer.conf.example
stratterm/src/: file_browser.rs  font.rs  frecency.rs  index_settings.rs  keyboard.rs  lib.rs  main.rs  parser.rs  pty.rs  renderer.rs  screen.rs  wayland.rs  wayland_kbd.rs
stratvm/: Makefile  wlr-layer-shell-unstable-v1-protocol.h
stratwm/: Cargo.toml  DEPRECATED.md
stratwm/src/: compositor.rs  config.rs  cursor.rs  input.rs  ipc.rs  main.rs  output.rs  seat.rs  surface.rs  tiling.rs  workspace.rs
sysroot/: Makefile  first-boot-provision.sh  initramfs-init.c  strat-indexer-boot.sh  strat-wpa.sh  system-init.c
tests/: phase1-partition-layout-test.sh  phase2-rust-efi-vars-test.sh  qemu-boot-test.sh  verify-mounts.sh
(+103 files in other folders)
