[package]
name = "stratmon"
version = "0.1.0"
edition = "2021"

[dependencies]
stratsup = { path = "../stratsup" }
nix = { version = "0.29", features = ["fs", "ioctl"] }
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
