[package]
name = "stratsettings"
version = "0.1.0"
edition = "2021"
description = "Modular StratOS UI/settings loader (TOML + settings.d merge, extension hooks)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
stratlayer = { path = "../stratlayer" }

[[bin]]
name = "strat-ui-config"
path = "src/bin/strat_ui_config.rs"

[[bin]]
name = "stratos-settings"
path = "src/bin/stratos_settings/main.rs"
