[package]
name = "stratwm"
version = "0.1.0"
edition = "2021"

[dependencies]
stratlayer = { path = "../stratlayer" }
nix = { version = "0.29", features = ["fs", "socket", "uio"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
